Bug (Login Page) : Login Page Form Field Alignment CSS Adjust

--- a/scss/template/filter.scss
+++ b/scss/template/filter.scss
@@ -1,4 +1,4 @@
-.navbar__filters-button{
+.sf-button.navbar__filters-button{
     text-decoration: none;
     font-size: 13px!important;
     background-color: var(--_c-green-primary-lighten);
